demo/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: felix-hello
spec:
  selector:
    app: hello
  ports:
    - port: 5000
      targetPort: 5000
