demo/kubernetes/ingress.yaml
# You can ignore this file - I didn't get this working in time for the workshop :( sorry
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
    - host: felix-hello.mc.uwcs.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 80
